# json-editor

./: Makefile  main.py  pyproject.toml  requirements.txt
src/agent/: graph.py  llm.py  nodes.py  state.py
src/models/: ap.py  m.py  m_1.py  m_2.py  m_3.py
summarization/: dataset.py  model.py  summarize.py  utils.py
