[project]
name = "json-editor"
version = "0.1.0"
description = "Электронная система управления документами с интеграцией ИИ"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "jsonschema>=4.25.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langgraph>=0.6.10",
    "llama-cpp-python>=0.3.16",
    "pydantic>=2.12.1",
    "pypdf>=6.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
    "jsonschema>=4.17.0",
    "sse-starlette>=2.1.4",
    "transformers>=4.57.0",
    "datasets>=4.2.0",
    "nltk>=3.9.2",
    "torch>=2.8.0",
    "accelerate>=1.10.1",
    "rouge-score>=0.1.2",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9.0",
    "ruff>=0.14.0,<0.15",
    "black>=25.9.0,<26.0",
    "mypy>=1.18.2,<2.0",
    "pytest-asyncio>=1.2.0,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["document_agent*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# -------- Настройки инструментов --------
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]

